--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -18,7 +18,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/6594176c2b.js" crossorigin="anonymous"></script>
     <title>Mimic revanced</title>
-    <link rel="stylesheet" href="./style.css?v=0.42.5">
+    <link rel="stylesheet" href="./style.css?v=0.42.6">
 </head>
 
 <body>
@@ -83,7 +83,7 @@
                         3. Vote off the Civilians
                     </p>
                     <br><br>
-                    <button class="im-ready-button" onclick="imReady(this)">I'm Ready</button>
+                    <button class="im-ready-button regular-button" onclick="imReady(this)">I'm Ready</button>
                 </div>
             </div>
             <div id="give-clue-slide" class="no-display">
