--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -436,12 +436,15 @@
                 } else {
                     $('#confirm-clue-buttonn').addClass('no-display');
                 }
-                $('#give-clue-player-name').text(playersInGame[playerID]["playerName"]);
                 $('#rules-slide')
                     .fadeOut(500)
                     .promise()
                     .then(function () {
-                        $('#give-clue-slide').fadeIn(500);
+                        $('#give-clue-player-name').text(playersInGame[playerID]["playerName"])
+                            .promuse()
+                            .then(function () {
+                                $('#give-clue-slide').fadeIn(500);
+                            });
                     });
             } else {
                 $('#give-clue-slide').fadeOut(500);
@@ -450,8 +453,11 @@
                 } else {
                     $('#confirm-clue-button').addClass('no-display');
                 }
-                $('#give-clue-player-name').text(playersInGame[playerID]["playerName"]);
-                $('#give-clue-slide').fadeIn(500);
+                $('#give-clue-player-name').text(playersInGame[playerID]["playerName"])
+                    .promuse()
+                    .then(function () {
+                        $('#give-clue-slide').fadeIn(500);
+                    });
             }
         }
     </script>
