--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -392,7 +392,7 @@
         }
 
         function setPlayerReady(e, playerID, isReady) {
-            if (e == null) {
+            if (e != null) {
                 // Fade out the ready button
                 $(e).fadeOut(500);
             }
@@ -473,7 +473,7 @@
         }
     </script>
 
-    <script src="./mimicGameLogic.js?v=0.65">
+    <script src="./mimicGameLogic.js?v=0.66">
     </script>
 </body>
 
