--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -485,13 +485,13 @@
                 });
         }
 
-        function castVote(e, playerID) {
-            if (e != null) {
-                // Fade out the ready button
-                $(e).fadeOut(500);
+        function castVote() {
+            $('.vote-button-container').fadeOut();
+            if (conn && conn.open) {
+                conn.send(["castVote", {
+                    "playerID": peer.id,
+                }]);
             }
-            // Set the player's ready status to true
-            playersInGame[playerID]['votes'] = playersInGame[playerID]['votes'] + 1;
         }
 
         function updatePlayersInGameList() {
@@ -501,10 +501,10 @@
             for (var player in playersInGame) {
                 if (peer.id == player) {
                     playersInGameList = playersInGameList +
-                        "<div class=\"player-container\"><div id=\"vote-showName-container\" class=\"showName-container\"><p class=\"player-name-text\">" + playersInGame[player]["playerName"] + "</p><div onclick=\"castVote(" + playersInGame[player]["playerID"] + ")\" id=\"vote-button-container\" class=\"vote-button-container\"><button class=\"vote-button\">Vote</button></div></div></div>"
+                        "<div class=\"player-container\"><div id=\"vote-showName-container\" class=\"showName-container\"><p class=\"player-name-text\">" + playersInGame[player]["playerName"] + "</p><div id=\"vote-button-container\" class=\"vote-button-container\"></div></div></div>"
                 } else {
                     playersInGameList = playersInGameList +
-                        "<div class=\"player-container\"><div id=\"vote-showName-container\" class=\"showName-container\"><p class=\"player-name-text\">" + playersInGame[player]["playerName"] + "</p><div onclick=\"castVote(" + playersInGame[player]["playerID"] + ")\" id=\"vote-button-container\" class=\"vote-button-container\"><button class=\"vote-button\">Vote</button></div></div></div>"
+                        "<div class=\"player-container\"><div id=\"vote-showName-container\" class=\"showName-container\"><p class=\"player-name-text\">" + playersInGame[player]["playerName"] + "</p><div onclick=\"castVote()\" id=\"vote-button-container\" class=\"vote-button-container\"><button class=\"vote-button\">Vote</button></div></div></div>"
                 }
             }
             votePlayerListElement.innerHTML = playersInGameList;
